Google Analytics を一旦除外

--- a/_includes/_haml/google_analytics.haml
+++ b/_includes/_haml/google_analytics.haml
@@ -3,6 +3,6 @@
   document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 :javascript
   try {
-    var pageTracker = _gat._getTracker("UA-42353458-1");
+    var pageTracker = _gat._getTracker("");
     pageTracker._trackPageview();
   } catch(err) {}
