--- a/_layouts/_haml/default.haml
+++ b/_layouts/_haml/default.haml
@@ -13,6 +13,6 @@
       {% include header.html %}
       {{ content }}
       {% include footer.html %}
-    {% include google_analytics.html %}
+    -# {% include google_analytics.html %}
 
     %script{:src => '/javascripts/main.js', :type => 'text/javascript'}
