API リファレンスを公式に向くように変更

--- a/_includes/_haml/header.haml
+++ b/_includes/_haml/header.haml
@@ -15,7 +15,7 @@
           %i.ic.bookmark
           %div DOCS
       %li
-        %a{:href => "/api", :title => "API", :target => "_blank"}
+        %a{:href => "http://crystal-lang.org/api/", :title => "API", :target => "_blank"}
           %i.ic.download
           %div API
 
