--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -4,7 +4,7 @@
 </script>
 <script>
   try {
-    var pageTracker = _gat._getTracker("UA-42353458-1");
+    var pageTracker = _gat._getTracker("");
     pageTracker._trackPageview();
   } catch(err) {}
 </script>
