--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
         </a>
       </li>
       <li>
-        <a href='/api' target='_blank' title='API'>
+        <a href='http://crystal-lang.org/api/' target='_blank' title='API'>
           <i class='ic download'></i>
           <div>API</div>
         </a>
