日本語版について追記

--- a/index.haml
+++ b/index.haml
@@ -44,3 +44,20 @@ layout: default
         公式 IRC チャンネル
         %ul
           %li irc.freenode.net の #crystal-lang [英語]
+
+%section
+  %h1 日本語版について
+  %p
+    本サイトは、英語版の公式サイトを有志によって日本語に翻訳したものです。
+    %br
+    翻訳についてのお問い合わせは、Crystal-JP の GitHub レポジトリまでお願いします。
+
+    %ul.goals
+      %li
+        %a{href: "https://github.com/crystal-jp/ja.crystal-lang.org"}
+          Crystal-JP 日本語翻訳プロジェクト
+
+      %li
+        %a{href: "http://crystal-lang.org/"}
+          Crystal 翻訳元サイト [英語]
+
