--- a/locale/ja/crystal-website/_includes/blog_row.html
+++ b/locale/ja/crystal-website/_includes/blog_row.html
@@ -1,8 +1,11 @@
 <div class="row blog-post">
   <div class="col s12">
+      
       {% assign authors = include.post.author | split: ',' %}
       {% for author in authors %}
+        
         <div class="author small">
+          
           {% img 'authors/{{ author }}.jpg' %}
           <span class="author_name">{{ site.data.blog_authors[author].name }}</span>
           {% if author == authors.last %}
@@ -13,12 +16,16 @@
               <span class="date">{{ date }}</span>
             {% endif %}
           {% endif %}
+        
         </div>
+      
       {% endfor %}
+
+    
 
     <a href="{{ include.post.url }}">
       <h3 class="title">{{ include.post.title }}</h3>
-      <p class="summary">{{ include.post.summary }}</p>
+      </a><p class="summary">{{ include.post.summary }}</p>
     </a>
 
     <p>
