--- a/locale/ja/crystal-website/_layouts/post.html
+++ b/locale/ja/crystal-website/_layouts/post.html
@@ -1,26 +1,31 @@
 ---
 layout: default
 ---
+
 <div class="container">
   <div class="row post-layout">
     <div class="col m2 share">
       <p class="title small share-title">Share</p>
       <div class="share-list">
+        
         {% assign share_url = site.url | append: page.url | cgi_escape %}
-        <a href="https://twitter.com/intent/tweet?url={{ share_url }}&text={{ page.title | cgi_escape }}&via=CrystalLanguage" target="_blank">
-          <div class="share-item"><i class="extra-icons twitter gray"></i></div>
+        
+        <a href="https://twitter.com/intent/tweet?url={{ share_url }}&amp;text={{ page.title | cgi_escape }}&amp;via=CrystalLanguage" target="_blank">
+          </a><div class="share-item"><i class="extra-icons twitter gray"></i></div>
         </a>
         <a href="https://www.facebook.com/sharer/sharer.php?u={{ share_url }}" target="_blank">
-          <div class="share-item"><i class="extra-icons facebook gray"></i></div>
+          </a><div class="share-item"><i class="extra-icons facebook gray"></i></div>
         </a>
         <a href="https://plus.google.com/share?url={{ share_url }}" target="_blank">
-          <div class="share-item"><i class="extra-icons google_plus gray"></i></div>
+          </a><div class="share-item"><i class="extra-icons google_plus gray"></i></div>
           </a>
       </div>
     </div>
 
     <div class="col s12 m9">
+      
       {{ content }}
+    
     </div>
     <div class="col m1"></div>
   </div>
@@ -28,7 +33,9 @@ layout: default
   <div class="row disqus">
     <div class="col m2"></div>
     <div class="col s12 m9" id='disqus_thread'>
+      
       {{ content }}
+    
     </div>
     <div class="col m1"></div>
   </div>
