--- a/locale/ja/crystal-website/_includes/media_font_sample.html
+++ b/locale/ja/crystal-website/_includes/media_font_sample.html
@@ -1,6 +1,6 @@
 <div class="font-item row">
   <div class="col s12">
     <span class="font-name small">{{ include.name }}</span>
-    <span class="{{ include.class }} font-sample">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz‘?’“!”(%)[#]{@}/$&lt;-+÷=&gt;®©$€£¥¢:;,.*</span>
+    <span class="{{ include.class }} font-sample">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz‘?’“!”(%)[#]{@}/$<-+÷=>®©$€£¥¢:;,.*</span>
   </div>
 </div>
