--- a/locale/ja/crystal-website/_includes/media_gallery_item.html
+++ b/locale/ja/crystal-website/_includes/media_gallery_item.html
@@ -1,5 +1,4 @@
-<a href="{{ include.img | asset_path }}"></a><div class="logo"><div class="border">
-  
+<a href="{{ include.img | asset_path }}"><div class="logo"><div class="border">
   {% img '{{ include.img }}' %}
   <span class="media-name small">{{ include.name }}</span>
 </div></div></a>
