--- a/locale/ja/crystal-website/_layouts/install.html
+++ b/locale/ja/crystal-website/_layouts/install.html
@@ -13,7 +13,7 @@ layout: default
 <hr class="hr-light">
 <div class="done-install">
   <h1>Done installing?</h1>
-  <a href="https://crystal-lang.org/reference/overview/" target="_blank" class="btn btn-large btn-flat">Learn</a>
+  <a href="https://crystal-lang.org/reference/getting_started/" target="_blank" class="btn btn-large btn-flat">Learn</a>
 
   <h2>Found any issues?</h2>
   <a href="https://forum.crystal-lang.org/c/help-support" target="_blank" class="btn btn-large btn-flat">Forum
