--- a/locale/ja/crystal-website/_includes/sponsors_sidebar.html
+++ b/locale/ja/crystal-website/_includes/sponsors_sidebar.html
@@ -3,7 +3,7 @@
     <h2>Want to become a sponsor?</h2>
     <p>If you like this project and you see its potential, you can help. Every dollar counts!</p>
     <p>
-      <a href="https://salt.bountysource.com/teams/crystal-lang" target="_blank"
+      <a href="https://opencollective.com/crystal-lang" target="_blank"
         class="btn btn-flat btn-large">Donate</a>
     </p>
   </div>
@@ -16,13 +16,14 @@
     <p>
       <h3>What is this list?</h3>
       These are the companies and individuals contributing a monthly amount to help sustain Crystal's development. See
-      the Bountysource campaign for more details.
+      the <a class="contributing-link" href="https://opencollective.com/crystal-lang" target="_blank">Open Collective campaign</a> for more details.
     </p>
 
     <p>
       <h3>I am a sponsor contributing $5/month, but my URL is not listed</h3>
-      We grab the website and avatar from your <a class="bountysource-link" href="https://www.bountysource.com/settings"
-        target="_blank">Bountysource profile</a>. If that fails, we try to use your GitHub or Twitter accounts listed in
+      We grab the website and avatar from your
+      <a class="contributing-link" href="https://opencollective.com" target="_blank">Open Collective profile</a> or your
+      <a class="contributing-link" href="https://www.bountysource.com/settings" target="_blank">Bountysource profile</a>. If that fails, we try to use your GitHub or Twitter accounts listed in
       that same profile.
     </p>
     <p>
