--- a/locale/ja/crystal-website/_includes/header.html
+++ b/locale/ja/crystal-website/_includes/header.html
@@ -12,7 +12,7 @@
         <div class='subtitle'>{{ page.description }}</div>
         <p class="main-actions">
           <a href="/install/" class="btn btn-large btn-flat">Install</a>
-          <a href="https://crystal-lang.org/reference/overview/" target="_blank" class="btn btn-large btn-flat">Learn</a>
+          <a href="https://crystal-lang.org/reference/getting_started/" target="_blank" class="btn btn-large btn-flat">Learn</a>
           <a href="https://play.crystal-lang.org/#/cr" target="_blank" class="btn btn-large btn-flat">Try Online</a>
         </p>
       {% else %}
