--- a/locale/ja/crystal-website/_includes/sponsors_sidebar.html
+++ b/locale/ja/crystal-website/_includes/sponsors_sidebar.html
@@ -1,10 +1,10 @@
 <div class="row become-sponsor">
   <div class="col">
-    <h2>Want to become a sponsor?</h2>
-    <p>If you like this project and you see its potential, you can help. Every dollar counts!</p>
+    <h2>スポンサーになりたいですか？</h2>
+    <p>このプロジェクトを気に入っていただき、その可能性を感じていただけたならば、力になれるはずです。どんな金額でも構いません。</p>
     <p>
       <a href="https://opencollective.com/crystal-lang" target="_blank"
-        class="btn btn-flat btn-large">Donate</a>
+        class="btn btn-flat btn-large">寄付</a>
     </p>
   </div>
 </div>
@@ -14,24 +14,19 @@
     <h2>FAQ</h2>
 
     <p>
-      <h3>What is this list?</h3>
-      These are the companies and individuals contributing a monthly amount to help sustain Crystal's development. See
-      the <a class="contributing-link" href="https://opencollective.com/crystal-lang" target="_blank">Open Collective campaign</a> for more details.
+      <h3>このリストは何ですか？</h3>
+      これらの企業や個人は、Crystal の発展を維持するために、毎月一定の金額を寄付してくれています。詳細は <a class="contributing-link" href="https://opencollective.com/crystal-lang" target="_blank">Open Collective でのキャンペーンページ</a>を確認してください。
     </p>
 
     <p>
-      <h3>I am a sponsor contributing $5/month, but my URL is not listed</h3>
-      We grab the website and avatar from your
-      <a class="contributing-link" href="https://opencollective.com" target="_blank">Open Collective profile</a> or your
-      <a class="contributing-link" href="https://www.bountysource.com/settings" target="_blank">Bountysource profile</a>. If that fails, we try to use your GitHub or Twitter accounts listed in
-      that same profile.
+      <h3>月5ドルのスポンサーをしているけれど、自分のURLがリストにありません。</h3>
+      Web サイトとアバター画像を <a class="contributing-link" href="https://opencollective.com" target="_blank">Open Collective のプロフィール</a>もしくは <a class="contributing-link" href="https://www.bountysource.com/settings" target="_blank">Bountysource のプロフィール</a>から取得しています。それができなかった場合は、GitHub もしくは Twitter のアカウントのものを使います。
     </p>
     <p>
-      We update the current sponsors in this page every other week.
+      このページの現在のスポンサー一覧は週に一度更新されます。
     </p>
     <p>
-      If there is any mismatch information you would like to correct, please <a href="mailto:crystal@manas.tech">contact
-        us</a>.
+      もし情報が間違っていて、正しく訂正したい場合は、<a href="mailto:crystal@manas.tech">私たちに連絡して</a>ください。
     </p>
   </div>
 </div>
