--- a/locale/ja/crystal-website/_layouts/default.html
+++ b/locale/ja/crystal-website/_layouts/default.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang='ja'>
   <head>
-    <title>{% if page.url != '/' %}{% unless page.layout == "install" %}{{ page.title }}{% else %}Install {{page.subtitle}}{% endunless %} - {% endif %}The Crystal Programming Language
-    </title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>{% if page.url != '/' %}{% unless page.layout == "install" %}{{ page.title }}{% else %}Install {{page.subtitle}}{% endunless %} - {% endif %}プログラミング言語 Crystal
+    </title><!-- Import Google Icon Font -->
     <meta charset='utf-8'>
-    <!-- Import Google Icon Font -->
+    
     <link href='https://fonts.googleapis.com/icon?family=Material+Icons|Roboto+Mono' rel='stylesheet'>
+    
     {% css stylesheet %}
-    <link href='/feed.xml' rel='alternate' title='Atom 1.0' type='application/atom+xml'>
+    <link href='/feed.xml' rel='alternate' title="Atom 1.0" type='application/atom+xml'>
     <link href='/favicon.png' rel='icon' type='image/png'>
     <link href='/favicon.ico' rel='shortcut icon' type='image/x-icon'>
     {% seo %}
+    
     <!-- Let browser know website is optimized for mobile -->
-    <meta content='width=device-width, initial-scale=1.0' name='viewport'>
+    <meta content="width=device-width, initial-scale=1.0" name='viewport'>
     <script src='https://code.jquery.com/jquery-3.1.1.min.js' type='text/javascript'></script>
   </head>
   <body>
     <div class="wrapper {{page.custom_body_classes | join: ' '}}">
+      
       {% include nav.html %}
       {% unless page.layout == "install" %}
         {% if page.is_post %}
@@ -30,9 +34,13 @@
         {{ content }}
       </main>
       {% include footer.html %}
+    
     </div>
+
+    
 
     {% js bundle %}
     {% include google_analytics.html %}
+  
   </body>
 </html>
