fix(website): update style and misc

--- a/locale/ja/crystal-website/_assets/css/_install.scss
+++ b/locale/ja/crystal-website/_assets/css/_install.scss
@@ -3,6 +3,8 @@
   .distro-title {
     @extend .black-text;
     text-align: center;
+  }
+  .center {
     margin-bottom: 5rem;
   }
   h2 {
@@ -12,7 +14,7 @@
     padding: 5rem 0;
     h1 {
       font-size: 3.4rem;
-      &.distro-title {
+      &.center {
         margin-bottom: 2rem;
       }
     }
