--- a/locale/ja/crystal-website/_layouts/install.html
+++ b/locale/ja/crystal-website/_layouts/install.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 <div class="container install">
-  <h1 class="center">{{ page.subtitle }}</h1>
-  <h1 class="distro-title"><a href="/install">インストール</a></h1>
+  <h1 class="distro-title">{{ page.subtitle }}</h1>
+  <h1 class="center"><a href="/install">インストール</a></h1>
   <div class="row">
     <div class="col offset-m1 m10 s12">{{ content }}</div>
   </div>
