guodes/testing 修正

--- a/locale/ja/crystal-website/_assets/css/_home.scss
+++ b/locale/ja/crystal-website/_assets/css/_home.scss
@@ -220,13 +220,8 @@
   }
 }
 
-.contributing-link {
-  color: #03A9F4;
-  border-bottom: 0;
-  &:hover {
-    color: #03A9F4;
-    border-bottom: 1px solid #03A9F4;
-  }
+.bountysource-link:hover {
+  text-decoration: underline;
 }
 
 @media only screen and (max-width: 992px) {
