--- a/locale/ja/crystal-website/_assets/css/_install.scss
+++ b/locale/ja/crystal-website/_assets/css/_install.scss
@@ -3,8 +3,6 @@
   .distro-title {
     @extend .black-text;
     text-align: center;
-  }
-  .center {
     margin-bottom: 5rem;
   }
   h2 {
@@ -14,7 +12,7 @@
     padding: 5rem 0;
     h1 {
       font-size: 3.4rem;
-      &.center {
+      &.distro-title {
         margin-bottom: 2rem;
       }
     }
@@ -31,7 +29,6 @@
   > div {
     text-align: center;
     .distro-icon {
-      display: block;
       height: 40px;
     }
     img {
