--- a/locale/ja/crystal-website/_includes/sponsors_sidebar.html
+++ b/locale/ja/crystal-website/_includes/sponsors_sidebar.html
@@ -2,7 +2,7 @@
   <div class="col">
     <h2>スポンサーになりたいですか？</h2>
     <p>このプロジェクトを気に入っていただき、その可能性を感じていただけたならば、力になれるはずです。どんな金額でも構いません。</p>
-    <p><a href="https://opencollective.com/crystal-lang" target="_blank"
+    <p><a href="https://salt.bountysource.com/teams/crystal-lang" target="_blank"
         class="btn btn-flat btn-large">寄付</a></p>
   </div>
 </div>
@@ -11,9 +11,10 @@
   <div class="col">
     <h2>FAQ</h2>
 
-    <p><h3>このリストは何ですか？</h3>これらの企業や個人は、Crystal の発展を維持するために、毎月一定の金額を寄付してくれています。詳細は <a class="contributing-link" href="https://opencollective.com/crystal-lang" target="_blank">Open Collective のキャンペーンページ</a>を確認してください。</p>
+    <p><h3>このリストは何ですか？</h3>これらの企業や個人は、Crystal の発展を維持するために、毎月一定の金額を寄付してくれています。See the Bountysource campaign for more details.</p>
 
-    <p><h3>月5ドルのスポンサーをしているけれど、自分のURLがリストにありません。</h3>Web サイトとアバター画像を <a class="contributing-link" href="https://opencollective.com" target="_blank">Open Collective のプロフィール</a>もしくは <a class="contributing-link" href="https://www.bountysource.com/settings" target="_blank">Bountysource のプロフィール</a>から取得しています。それができなかった場合は、GitHub もしくは Twitter のアカウントのものを使います。</p>
+    <p><h3>月5ドルのスポンサーをしているけれど、自分のURLがリストにありません。</h3>We grab the website and avatar from your <a class="bountysource-link" href="https://www.bountysource.com/settings"
+        target="_blank">Bountysource profile</a>. それができなかった場合は、GitHub もしくは Twitter のアカウントのものを使います。</p>
     <p>このページの現在のスポンサー一覧は週に一度更新されます。</p>
     <p>もし情報が間違っていれ、訂正を求める場合は、<a href="mailto:crystal@manas.tech">私たちに連絡して</a>ください。</p>
   </div>
