--- a/locale/ja/crystal-website/_layouts/install.html
+++ b/locale/ja/crystal-website/_layouts/install.html
@@ -2,12 +2,12 @@
 layout: default
 ---
 <div class="container install">
-  <h1 class="distro-title">{{ page.subtitle }}</h1>
   <h1 class="center"><a href="/install">インストール</a></h1>
+  <h1 class="distro-title">{{ page.subtitle }}</h1>
   <div class="row">
     <div class="col offset-m1 m10 s12">{{ content }}</div>
   </div>
 </div>
 <hr class="hr-light">
 <div class="done-install">
-  <h1>インストールできましたか？</h1><a href="https://ja.crystal-lang.org/reference/getting_started/" target="_blank" class="btn btn-large btn-flat">学ぶ</a><h2>何か問題が発生しましたか？</h2><a href="https://forum.crystal-lang.org/c/help-support" target="_blank" class="btn btn-large btn-flat">フォーラムでのサポート</a>。</div>
+  <h1>インストールできましたか？</h1><a href="https://ja.crystal-lang.org/reference/overview/" target="_blank" class="btn btn-large btn-flat">学ぶ</a><h2>何か問題が発生しましたか？</h2><a href="https://forum.crystal-lang.org/c/help-support" target="_blank" class="btn btn-large btn-flat">フォーラムでのサポート</a>。</div>
