--- a/locale/ja/crystal-website/_includes/sponsors_sidebar.html
+++ b/locale/ja/crystal-website/_includes/sponsors_sidebar.html
@@ -3,7 +3,7 @@
     <h2>スポンサーになりたいですか？</h2>
     <p>このプロジェクトを気に入っていただき、その可能性を感じていただけたならば、力になれるはずです。どんな金額でも構いません。</p>
     <p><a href="https://opencollective.com/crystal-lang" target="_blank"
-        class="btn btn-flat btn-large">寄付</a></p>
+        class="btn btn-flat btn-large">Contribute</a></p>
   </div>
 </div>
 
