--- a/locale/ja/crystal-website/_assets/css/_sprites.scss
+++ b/locale/ja/crystal-website/_assets/css/_sprites.scss
@@ -13,6 +13,7 @@ i.extra-icons {
   &.github          { background-position: 0px -24px; }
   &.stack_overflow  { background-position: 1px -1px; }
   &.gitter          { background-position: -24px -24px; }
+  &.discord         { background-position: 0px -72px; }
   &.google          { background-position: -47px -24px; }
   &.twitter         { background-position: -24px -1px; }
   &.reddit          { background-position: -72px -1px; }
