--- a/locale/ja/crystal-website/_layouts/default.html
+++ b/locale/ja/crystal-website/_layouts/default.html
@@ -9,6 +9,5 @@
     <link href='/favicon.ico' rel='shortcut icon' type='image/x-icon'>{% seo %} <!-- Let browser know website is optimized for mobile --><meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <script src='https://code.jquery.com/jquery-3.1.1.min.js' type='text/javascript'></script>
   </head>
-  <body>
-    <div class="wrapper {{page.custom_body_classes | join: ' '}}">{% include nav.html %} {% unless page.layout == 'install' %} {% if page.is_post %} {% include post_header.html %} {% else %} {% include header.html %} {% endif %} {% endunless %}<main>{{ content }}</main>{% include footer.html %}</div>{% js bundle %} {% include google_analytics.html %}</body>
+  <body>{% include banner.html %}<div class="wrapper {{page.custom_body_classes | join: ' '}}">{% include nav.html %} {% unless page.layout == 'install' %} {% if page.is_post %} {% include post_header.html %} {% else %} {% include header.html %} {% endif %} {% endunless %}<main>{{ content }}</main>{% include footer.html %}</div>{% js bundle %} {% include google_analytics.html %}</body>
 </html>
