--- a/locale/ja/crystal-website/_assets/css/_home.scss
+++ b/locale/ja/crystal-website/_assets/css/_home.scss
@@ -8,6 +8,8 @@
       color: $white;
     }
     .subtitle {
+      color: $white;
+      font-size: 32px;
       margin-bottom: 40px;
     }
     p.main-actions {
