--- a/locale/ja/crystal-website/_includes/header.html
+++ b/locale/ja/crystal-website/_includes/header.html
@@ -3,18 +3,17 @@
   <div id='content'>
     <div class='valign center-align'>
       {% if page.url == "/" %}
-        <div id="crystal-container">
-          <svg id="Crystal" data-name="Crystal" height="42" width="230" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 230 42"><title>crystal</title><path d="M27.93,34.73l.64,5.45a42,42,0,0,1-12.29,1.51q-9,0-12.63-4.64T0,21Q0,9.58,3.65,4.95T16.28.31A45.27,45.27,0,0,1,27.76,1.59l-.69,5.51q-5-.4-10.78-.41-5,0-6.81,3T7.65,21q0,8.23,1.82,11.27t6.81,3A91.36,91.36,0,0,0,27.93,34.73ZM64.79,41H57.08l-3.19-12.4A4.51,4.51,0,0,0,49.26,25l-7.18-.06V41H34.88V1Q40,.48,49.43.49,57,.49,60.18,3t3.16,9.19q0,4.63-1.74,7.1t-5.74,3v.29a7,7,0,0,1,3.25,1.85,7.82,7.82,0,0,1,2.09,4.06ZM42.07,19h7.18q3.88-.06,5.3-1.39t1.42-5Q56,9,54.56,7.73t-5.3-1.28H42.07Zm44.74,8.46V41H79.56V27.37L66.41,1h7.65l7.3,15.53q.4.93,1.62,4.81h.46q1.22-3.88,1.62-4.81L92.37,1H99.9Zm32-2.32-8.06-2.55a11.15,11.15,0,0,1-6.2-4.2A13.22,13.22,0,0,1,102.69,11q0-6.55,3-8.64T116.42.31A51.36,51.36,0,0,1,129,1.65l-.46,5.16q-6.6-.23-11.88-.23-4,0-5.33.78T110,11.15a5.07,5.07,0,0,0,1,3.51,8.38,8.38,0,0,0,3.51,1.82l7.71,2.38q4.58,1.45,6.4,4.26a13.37,13.37,0,0,1,1.83,7.39q0,6.61-3.13,8.9t-11.07,2.29a66.11,66.11,0,0,1-13-1.27l.46-5.33q10.14.23,12.69.23,4,0,5.33-.93T123,30.45a5.31,5.31,0,0,0-.9-3.54A7.64,7.64,0,0,0,118.8,25.17ZM166,7.21H153.68V41h-7.3V7.21H134.15V1H166Zm23.76,22.49H174.95L171.65,41h-7.42l12-38.07A2.43,2.43,0,0,1,178.83,1h7.07a2.43,2.43,0,0,1,2.61,1.91l12,38.07h-7.42Zm-1.74-6L184,9.93q-.81-3.13-.87-3.42h-1.56l-.93,3.42-4,13.79ZM212.38,1V31.66a3.52,3.52,0,0,0,.75,2.58,3.83,3.83,0,0,0,2.66.72h13.91l.29,5.62q-5.68.52-15.88.52-9,0-9-8.29V1Z"/></svg>
-        </div>
         <div class='brand-logo' id='logo-container'>
           <canvas height='300' id='logo-canvas' style='cursor:move' width='300'></canvas>
         </div>
-        <div class='subtitle'>{{ page.description }}</div>
+        <div id="crystal-container">
+          <!-- svg id="Crystal" data-name="Crystal" height="42" width="230" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 230 42"><title>crystal</title><path d="M27.93,34.73l.64,5.45a42,42,0,0,1-12.29,1.51q-9,0-12.63-4.64T0,21Q0,9.58,3.65,4.95T16.28.31A45.27,45.27,0,0,1,27.76,1.59l-.69,5.51q-5-.4-10.78-.41-5,0-6.81,3T7.65,21q0,8.23,1.82,11.27t6.81,3A91.36,91.36,0,0,0,27.93,34.73ZM64.79,41H57.08l-3.19-12.4A4.51,4.51,0,0,0,49.26,25l-7.18-.06V41H34.88V1Q40,.48,49.43.49,57,.49,60.18,3t3.16,9.19q0,4.63-1.74,7.1t-5.74,3v.29a7,7,0,0,1,3.25,1.85,7.82,7.82,0,0,1,2.09,4.06ZM42.07,19h7.18q3.88-.06,5.3-1.39t1.42-5Q56,9,54.56,7.73t-5.3-1.28H42.07Zm44.74,8.46V41H79.56V27.37L66.41,1h7.65l7.3,15.53q.4.93,1.62,4.81h.46q1.22-3.88,1.62-4.81L92.37,1H99.9Zm32-2.32-8.06-2.55a11.15,11.15,0,0,1-6.2-4.2A13.22,13.22,0,0,1,102.69,11q0-6.55,3-8.64T116.42.31A51.36,51.36,0,0,1,129,1.65l-.46,5.16q-6.6-.23-11.88-.23-4,0-5.33.78T110,11.15a5.07,5.07,0,0,0,1,3.51,8.38,8.38,0,0,0,3.51,1.82l7.71,2.38q4.58,1.45,6.4,4.26a13.37,13.37,0,0,1,1.83,7.39q0,6.61-3.13,8.9t-11.07,2.29a66.11,66.11,0,0,1-13-1.27l.46-5.33q10.14.23,12.69.23,4,0,5.33-.93T123,30.45a5.31,5.31,0,0,0-.9-3.54A7.64,7.64,0,0,0,118.8,25.17ZM166,7.21H153.68V41h-7.3V7.21H134.15V1H166Zm23.76,22.49H174.95L171.65,41h-7.42l12-38.07A2.43,2.43,0,0,1,178.83,1h7.07a2.43,2.43,0,0,1,2.61,1.91l12,38.07h-7.42Zm-1.74-6L184,9.93q-.81-3.13-.87-3.42h-1.56l-.93,3.42-4,13.79ZM212.38,1V31.66a3.52,3.52,0,0,0,.75,2.58,3.83,3.83,0,0,0,2.66.72h13.91l.29,5.62q-5.68.52-15.88.52-9,0-9-8.29V1Z"/></svg -->
+	  <h1 class='title' style="margin-bottom: 5px;">Crystal 1.0 Conference</h1>
+        </div>
+        <div class='subtitle' style="margin-bottom: 20px;">{{ page.description }}</div>
         <p class="main-actions">
-          <a href="/install/" class="btn btn-large btn-flat">Install</a>
-          <a href="https://crystal-lang.org/reference/getting_started/" target="_blank" class="btn btn-large btn-flat">Learn</a>
-          <a href="https://play.crystal-lang.org/#/cr" target="_blank" class="btn btn-large btn-flat">Try Online</a>
-        </p>
+          <a href="https://www.eventbrite.com/e/crystal-conference-10-launch-tickets-149153252393" target="_blank" class="btn btn-large btn-flat" style="margin-bottom: 40px;">Get your tickets!</a>
+	</p>
       {% else %}
         {% if page.url == '/sponsors/' %}
           <div class="row">
