deploy: 0e56e7f29aa5c7e5ddb912b7d5072ceab2101653

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -7499,6 +7499,18 @@ table.no-underline a {
     color: #ffffff;
     background-color: #000000; }
 
+.btn-flat-white {
+  border: 2px solid #000000;
+  padding: 0 42px;
+  margin: 0 10px;
+  color: #000000;
+  background-color: #ffffff; }
+  .btn-flat-white:active {
+    background-color: #ffffff; }
+  .btn-flat-white:hover {
+    color: #ffffff;
+    background-color: #000000; }
+
 .side-nav#nav-mobile {
   text-align: left !important; }
   .side-nav#nav-mobile a {
@@ -7727,6 +7739,9 @@ i.manas {
       color: #777777; }
   .post-layout h1, .post-layout h1, .post-layout h2 {
     margin-top: 100px; }
+  .post-layout hr {
+    border: none;
+    border-top: 1px solid #D7D7D7; }
 
 pre {
   margin: 0 2em; }
@@ -8028,6 +8043,8 @@ code.highlighter-rouge {
   .main .header-section h1.title {
     color: #ffffff; }
   .main .header-section .subtitle {
+    color: #ffffff;
+    font-size: 32px;
     margin-bottom: 40px; }
   .main .header-section p.main-actions .btn {
     margin-right: 15px; }
