--- a/locale/ja/crystal-website/_assets/css/stylesheet.scss
+++ b/locale/ja/crystal-website/_assets/css/stylesheet.scss
@@ -34,6 +34,8 @@ $codeFont:      'Roboto Mono', monospace;
         "media",
         "install",
         "community",
+        "team",
+        "conference",
         "pygment_overrides",
         "error",
         "home",
