--- a/locale/ja/crystal-website/_assets/css/_generic.scss
+++ b/locale/ja/crystal-website/_assets/css/_generic.scss
@@ -168,6 +168,7 @@ table.no-underline a {
   // This padding makes room for .banner.sponsorship to overlap into .header-section
   padding-bottom: 30px;
   @media only screen and (max-width: 768px) {
+    min-height: 265px;
     // On small width, .banner.sponsorship spans over two lines, needing more space
     padding-bottom: 45px;
   }
@@ -266,7 +267,7 @@ table.no-underline a {
   .wrapper {
     .header-section {
       .title {
-        font-size: 3.4rem;
+        font-size: 2.8rem;
       }
     }
     nav {
