--- a/locale/ja/crystal-website/_includes/header.html
+++ b/locale/ja/crystal-website/_includes/header.html
@@ -12,13 +12,13 @@
         </div>
         <div class='subtitle' style="margin-bottom: 20px;">{{ page.description }}</div>
         <p class="main-actions">
-          <a href="/conference" class="btn btn-large btn-flat" style="margin-bottom: 40px;">Agenda</a>
+          <a href="/conference" class="btn btn-large btn-flat" style="margin-bottom: 40px;">Watch the videos</a>
 	      </p>
       {% else %}
         {% if page.url == '/sponsors/' %}
           <div class="row">
             <div class="col offset-m1 m10 s12">
-              <h1 class='title'>{{ site.data.sponsors.size }} {{ page.title }}</h1>
+              <h1 class='title'>{{ site.data.sponsors.size }}+ {{ page.title }}</h1>
             </div>
           </div>
         {% else %}
